[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "openosint"
version = "2.20.0"
description = "AI-powered OSINT agent, MCP server, and CLI. Interactive REPL + 16 tools. Anthropic Claude or local Ollama. For authorized security research use only."
readme = "README.md"
requires-python = ">=3.10"
license = "MIT"
authors = [
    {name = "Tommaso Bertocchi"}
]
keywords = [
    "osint", "security", "mcp", "cli", "ai", "agent",
    "anthropic", "claude", "investigation", "recon", "cybersecurity"
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Intended Audience :: Science/Research",
    "Topic :: Security",
    "Topic :: Internet",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
]
dependencies = [
    "mcp>=1.0.0",
    "anthropic>=0.40.0",
    "requests>=2.31.0",
    "python-whois>=0.9.0",
    "rich>=13.0.0",
    "prompt_toolkit>=3.0.0",
    "python-dotenv==1.2.2",
    "aiohttp>=3.9.0",
    "dnspython>=2.6.0",
    "fastapi==0.136.3",
    "uvicorn[standard]==0.49.0",
    "tinydb==4.8.2",
    "httpx==0.28.1",
    "feedparser>=6.0.0",
    "apscheduler==3.11.2",
    "pydantic==2.13.4",
    "annotated-doc==0.0.4",
    "annotated-types==0.7.0",
    "anyio==4.13.0",
    "certifi==2026.5.20",
    "click==8.4.1",
    "colorama==0.4.6",
    "h11==0.16.0",
    "httpcore==1.0.9",
    "idna==3.18",
    "pydantic-core==2.46.4",
    "starlette==1.3.0",
    "typing-inspection==0.4.2",
    "typing-extensions==4.15.0",
    "tzdata==2026.2",
    "tzlocal==5.3.1",
    "sublist3r>=1.0",
]

[project.urls]
Homepage = "https://openosint.github.io/OpenOSINT"
Repository = "https://github.com/OpenOSINT/OpenOSINT"
Documentation = "https://openosint.github.io/OpenOSINT"
"Bug Tracker" = "https://github.com/OpenOSINT/OpenOSINT/issues"

[project.scripts]
openosint = "openosint.cli:main"
openosint-mcp = "openosint.mcp_server:main"

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "pytest-cov>=7.1.0",
    "pytest-freezegun>=0.4.2",
    "ruff>=0.1.0",
]
shodan = [
    "shodan>=1.31.0",
]
ollama = [
    "ollama>=0.3.0",
]
openai = [
    "openai>=1.40.0",
]
openrouter = [
    "openai>=1.40.0",
]
gemini = [
    "google-generativeai>=0.8.0",
]
pdf = [
    "reportlab>=4.0.0",
]
censys = [
    "censys>=2.2.0",
]
web = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.0",
    "python-dotenv>=1.0.0",
    "anthropic>=0.25.0",
    "playwright>=1.40.0",
]
all = [
    "shodan>=1.31.0",
    "ollama>=0.3.0",
    "openai>=1.40.0",
    "google-generativeai>=0.8.0",
    "reportlab>=4.0.0",
    "censys>=2.2.0",
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
    "sse-starlette>=1.8.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["openosint*"]
exclude = ["assets*", "docs*", "scripts*", "tests*"]

[tool.setuptools.package-data]
openosint = ["web/*.html", "web/**/*"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "W"]
ignore = ["E501"]

[tool.mypy]
ignore_missing_imports = true

[[tool.mypy.overrides]]
module = "openosint.web_server"
ignore_errors = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
